--- a/css/style.css
+++ b/css/style.css
@@ -6,8 +6,16 @@
 html{
     font-size: 1rem;
 }
+.maincontainer{
+    width: 100%;
+    position: relative;
+    top: 0;
+    left: 0;
+    min-width: 1189px;
+}
 .navbar{
     height: 83px;
+    width: 100%;
     background-color: rgba(240, 248, 255, 0.774);
     justify-content: center;
     align-items: center;
@@ -22,10 +30,6 @@ html{
     justify-content: space-between;
     align-items: center;
     font-weight: 600;
-    /* background: #000; */
-
-
-
 }
 .logo{
     width: 5rem;
@@ -36,8 +40,6 @@ html{
 }
 .logo img {
     width: 80%;
-
-    /* object-fit: cover; */
 }
 #midparent{
     width: 70%;
@@ -49,12 +51,10 @@ html{
     justify-content: space-around;
     align-items: center;
     gap: .2rem;
-    /* background: #000; */
     
 
 }
 .middle div{
-    /* width: 16.6%; */
     font-weight: 600;
     font-size: 1rem;
     cursor: pointer;
@@ -65,7 +65,6 @@ display: none;
 }
 @media only screen and (max-width: 950px) {
     .middle div{
-        /* width: 16.6%; */
         font-weight: 600;
         font-size: 0.9rem;
     }
@@ -91,28 +90,31 @@ display: none;
   /* back image content */
   /*============================================= */
   .imgbody{
-    width: 98%;
-    height: auto;
-    background: #000;
+    width: 99%;
     margin: 0 auto;
     position: relative;
+max-width:  1500px;
+
+
   }
+
   .imgbody::after{
     content: "";
     width: 100%;
     height: 100%;
-    /* background: black; */
-    background-image: linear-gradient(to top, white 0%,transparent 50%);
+    background-image: linear-gradient(to top,white 0%,transparent 50%);
     position: absolute;
     top: 0;
     left: 0;
 
 
-  }
+  } 
   .imgbody img{
-/* max-width:  100%; */
+   max-width:  1500px;
+   height: calc(100vh - 83px);
    width: 100%;
-   /* object-fit: cover; */
+   object-fit: cover;
+
 
   }
 /* ===================================================== */
@@ -128,23 +130,111 @@ display: none;
     bottom: 0;
 
     margin: auto;
-    margin-top: 200px;
-    width: 95%;
-    background: white;
+    margin-top: 20%;
+    width: 97%;
+    z-index: 1;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
 
 }
 
-.content{
+.discription{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 10px;
+    width: 100%;
+    height: 60px;
+    background-color: white;
+
+}
+/* ==================== */
+/* contentitem1 */
+/* ====================== */
+.contentitem1{
+    /* width: 100%; */
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+    z-index: 1;
+}
+
+.childcontentitem1{
+     /* width: calc(100% - 54px);  */
+     width: calc(25% - 15px);
+    min-width: 285px; 
+    height: 420px;
+    padding: 15px;
+    background: white;
+}
+.innerchildcontentitem1{
+    width: 100%;
+    height: 100%;
+    display: block;
+    flex-direction: column;
+    display: flex;
+    gap: 10px;
+    
+}
+.innerchildcontentitem1 .title{
+    font-size: 21px;
+    font-weight: 600;
+    display: block;
+}
+
+ .childcontentitem1logo{
+    width: 100%;
+    height: 340px;
+    display: block;
+} 
+
+.childcontentitem1logo img{
+    width: 100%;
+    object-fit: cover;
+    display: block;
+    height: 100%;
+}
+.childcontentitem1item{
+    width: 100%;
+    height: 340px;
+    display: flex;
+    flex-wrap: wrap;
+    margin: 0;
+    padding: 0;
+    /* gap: 20px; */
+    /* justify-content: space-between; */
+}
+.childcontentitem1item .list{
+   width: 50%;
+   height: 150px;
+   position: relative;
+
+}
+.childcontentitem1item .list p{
     position: absolute;
-    top: 40%;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    margin: auto;
-    width: 95%;
-    height: auto;
-   
-    /* background: pink; */
+bottom: -2px;
+left: 0;
+}
+.childcontentitem1item img{
+    /* width: 100%; */
+    height: 100%;
+    object-fit: cover;
+    margin: 0;
+    padding: 0;
+}
+
+
+@media only screen and (max-width:1250px) {
+
+    .contentitem1{
+        display: flex;
+        gap: 10px;
+    }
+    .childcontentitem1{
+        flex-grow: 1;
+        background-color: gray;   
+    }
 }
 
 
@@ -168,11 +258,9 @@ display: none;
       }
       .middle{
         visibility: hidden;
-        /* display: none; */
      }
 
     .midparent{
-    /* background: rgba(226, 77, 77, 0.518); */
     position: absolute;
     top: 0;
     right: 0;
